[gd_scene load_steps=11 format=3 uid="uid://bswuk16ic60tb"]

[ext_resource type="Script" path="res://menu.gd" id="1_d1tdx"]
[ext_resource type="Texture2D" uid="uid://n8ecgfx3wini" path="res://Sky-layer.png" id="1_t7q7p"]
[ext_resource type="FontFile" uid="uid://b8ce5xbf6rxcn" path="res://DinaRemasterCollection.ttc" id="2_yfmg7"]
[ext_resource type="Texture2D" uid="uid://bjcbkjetgnrq2" path="res://siyah_kedi_idle.png" id="3_a0dqd"]

[sub_resource type="LabelSettings" id="LabelSettings_d01i0"]
font = ExtResource("2_yfmg7")
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hfpw2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0yayp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ld2at"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7gqev"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x0wej"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_d1tdx")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -5
follow_viewport_enabled = true

[node name="Background" type="Sprite2D" parent="CanvasLayer"]
z_index = -5
position = Vector2(0, -21)
scale = Vector2(0.333, 0.333)
texture = ExtResource("1_t7q7p")

[node name="PlayLabel" type="Label" parent="CanvasLayer"]
texture_filter = 1
offset_left = -112.0
offset_top = 50.0
offset_right = 112.0
offset_bottom = 85.0001
text = "TOUCH TO START"
label_settings = SubResource("LabelSettings_d01i0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BestScoreLabel" type="Label" parent="CanvasLayer"]
texture_filter = 1
offset_left = -112.0
offset_top = -82.0
offset_right = 112.0
offset_bottom = -46.9999
label_settings = SubResource("LabelSettings_d01i0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
texture_filter = 1
scale = Vector2(3.0625, 3.0625)
texture = ExtResource("3_a0dqd")

[node name="Timer" type="Timer" parent="CanvasLayer"]
wait_time = 0.7
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="Button" type="Button" parent="."]
offset_left = -96.0
offset_top = -171.0
offset_right = 96.0
offset_bottom = 171.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_hfpw2")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0yayp")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ld2at")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7gqev")
theme_override_styles/focus = SubResource("StyleBoxEmpty_x0wej")

[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
